src/main/java/com/example/demo/Dto/Error/Response/OccupancyExceedResponse.java
package com.example.demo.Dto.Error.Response;

import lombok.Getter;
import lombok.Setter;

@Getter
@Setter
public class OccupancyExceedResponse {
    private String code;
    private String message;
}
